Fri Nov 20 08:34:48 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * examples/RTScheduling/Fixed_Priority_Scheduler/FP_Scheduler.h:
        * examples/RTScheduling/Fixed_Priority_Scheduler/FP_Scheduler.cpp:
        * examples/RTScheduling/MIF_Scheduler/MIF_Scheduler.h:
        * examples/RTScheduling/MIF_Scheduler/MIF_Scheduler.cpp:
          Resolved compiler errors related to the IDL compiler
          change (see see Tue Nov 17 20:47:27 UTC 2009  Jeff Parsons
          for more details).

Thu Nov 19 20:18:53 UTC 2009  Abdullah Sowayan  <sowayan@gmail.com>

        * tests/Bug_3766_Regression/Test.idl:
        * tests/Bug_3766_Regression/TestI.h:
        * tests/Bug_3766_Regression/TestI.cpp:
        * tests/Bug_3766_Regression/client.cpp:

          Extend this test to test Variable sized types in addition
          to Fixed size types.

Thu Nov 19 19:50:30 UTC 2009  Abdullah Sowayan  <sowayan@gmail.com>

        * bin/tao_orb_tests.lst:

          Add BUG_3766_Regression to the list of tests to run.

Thu Nov 19 15:40:53 UTC 2009  Abdullah Sowayan  <sowayan@gmail.com>

        * tests/Bug_3766_Regression:
        * tests/Bug_3766_Regression/Bug_3766_Regression.mpc:
        * tests/Bug_3766_Regression/Test.idl:
        * tests/Bug_3766_Regression/TestI.h:
        * tests/Bug_3766_Regression/TestI.cpp:
        * tests/Bug_3766_Regression/run_test.pl:
        * tests/Bug_3766_Regression/server.cpp:

          Added a regression test for Bugzilla 3766.

Thu Nov 19 12:38:10 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * tests/Bug_2234_Regression/server.cpp:

          Test is converted to use new test framework and added to fuzz build.

Thu Nov 19 08:25:13 UTC 2009  Denis Budko  <denis.budko@remedy.nl>

        * orbsvcs/tests/Trading/export_test.cpp:
        * orbsvcs/tests/Trading/run_test.pl:
        * orbsvcs/tests/Security/Callback/server.cpp:
        * orbsvcs/tests/Security/Callback/client.cpp: