@@ -145,7 +145,7 @@ TAO/tests/Bug_3542_Regression/run_test.pl: !ST !NO_MESSAGING !MINIMUM !CORBA_E_C
 #TAO/tests/Bug_3543_Regression/run_test.pl: !ST
 TAO/tests/Bug_3548_Regression/run_test.pl:
 TAO/tests/Bug_3552_Regression/run_test.pl:
-TAO/tests/Bug_3553_Regression/run_test.pl: !CORBA_E_MICRO
+TAO/tests/Bug_3553_Regression/run_test.pl: !CORBA_E_COMPACT !CORBA_E_MICRO
 TAO/tests/Bug_3559_Regression/run_test.pl:
 TAO/tests/Bug_3558_Regression/run_test.pl:
 TAO/tests/Bug_3565_Regression/run_test.pl:
@@ -168,7 +168,7 @@ TAO/tests/Bug_3701_Regression/run_test.pl:
 TAO/tests/Bug_3743_Regression/run_test.pl: !NO_IFR
 TAO/tests/Bug_3746_Regression/run_test.pl:
 TAO/tests/Bug_3748_Regression/run_test.pl: !MINIMUM !CORBA_E_COMPACT !CORBA_E_MICRO !DISABLE_INTERCEPTORS
-TAO/tests/Bug_3755_Regression/run_test.pl: !STATIC
+TAO/tests/Bug_3755_Regression/run_test.pl: !STATIC !CORBA_E_COMPACT !CORBA_E_MICRO !ST
 TAO/tests/Bug_3766_Regression/run_test.pl:
 TAO/tests/DIOP/run_test.pl: !ST !NO_DIOP !ACE_FOR_TAO !CORBA_E_MICRO
 TAO/tests/DIOP/run_test_ipv6.pl: IPV6 !ST !NO_DIOP !ACE_FOR_TAO !CORBA_E_MICRO
